WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270598
[Text Extraction] Ignore transparent (or nearly-transparent) elements when extracting text
https://bugs.webkit.org/show_bug.cgi?id=270598
Summary
[Text Extraction] Ignore transparent (or nearly-transparent) elements when ex...
Wenson Hsieh
Reported
2024-03-06 14:26:24 PST
rdar://124102506
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-03-06 14:30:59 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25552
EWS
Comment 2
2024-03-06 18:00:20 PST
Committed
275769@main
(e23f17abb853): <
https://commits.webkit.org/275769@main
> Reviewed commits have been landed. Closing PR #25552 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug